FrontEnd/assets/style.css
/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul, link {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}
/** end reset css**/
body {
	max-width: 1140px;
	margin:auto;
	font-family: 'Work Sans' ;
	font-size: 14px;
}
header {
	display: flex;
	justify-content: space-between;
	margin: 50px 0
}
section {
	margin: 50px 0
}

h1{
	display: flex;
	flex-direction: column;
	font-family: 'Syne';
	font-size: 22px;
	font-weight: 800;
	color: #B1663C
}

h1 > span {
	font-family: 'Work Sans';
	font-size:10px;
	letter-spacing: 0.1em;
}

h2 {
	font-family: 'Syne';
	font-weight: 700;
	font-size: 30px;
	color: #1D6154
}

nav ul {
	display: flex;
	align-items: center;
	list-style-type: none;

}
nav li {
	padding: 0 10px;
	font-size: 1.2em;
}

li:hover {
	color: #B1663C;
}

#introduction {
	display: flex;
	align-items: center;
}
#introduction figure {
	flex: 1
}
#introduction img {
	display: block;
	margin: auto;
	width: 80%;
}

#introduction article {
	flex: 1
}
#introduction h2 {
	margin-bottom: 1em;
}

#introduction p {
	margin-bottom: 0.5em;
}
#portfolio {
	display: flex;
	flex-direction: column;
	flex-wrap: wrap;
	text-align: center;
	margin-bottom: 1em;
}

.StylePortfolio {
	display: flex;
	justify-content: center;
	align-items: center;
	gap: 20px;
	margin-bottom: 2em;
}

.gallery {
	width: 100%;
	display: grid;
	grid-template-columns: 1fr 1fr 1fr;
	grid-column-gap: 20px;
	grid-row-gap: 20px;
}

.gallery img {
	width: 100%;

}
#contact {
	width: 50%;
margin: auto;
}
#contact > * {
	text-align: center;

}
#contact h2{
	margin-bottom: 20px;
}
#contact form {
	text-align: left;
	margin-top:30px;
	display: flex;
	flex-direction: column;
}

#contact input {
	height: 50px;
	font-size: 1.2em;
	border: none;
	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
}
#contact label {
	margin: 2em 0 1em 0;
}
#contact textarea {
	border: none;
	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
}

input[type="submit"]{
	font-family: 'Syne';
	font-weight: 700;
	color: white;
	background-color: #1D6154;
	margin : 2em auto ;
	width: 180px;
	text-align: center;
	border-radius: 60px ;
}

footer nav ul {
	display: flex;
	justify-content: flex-end;
	margin: 2em
}

.filters {
	display: flex;
	justify-content: center;
	margin-bottom: 2em;
}

.filters button {
	font-family: 'Syne';
	font-weight: 700;
	color: #1D6154;
	background-color: transparent;
	border: 1px solid #1D6154;
	padding: 5px 18px;
	margin: 5px;
	cursor: pointer;
	border-radius: 60px ;
}	

.filters button:hover {
	background-color: #1D6154;
	color: white;
}

.style-form {
	display: flex;
	flex-direction: column;
	width: 300px;
	margin: 20px auto 20px auto;
}

.style-form label {
	margin: 10px;
}

.style-form input {
	height: 40px;
	font-size: 1.2em;
	border: none;
	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
}

.style-form input[type="submit"] {
	font-family: 'Syne';
	font-weight: 700;
	color: white;
	background-color: #1D6154;
	margin : 2em auto ;
	width: 180px;
	text-align: center;
	border-radius: 60px ;
}

.style-form button {
	font-family: 'Syne';
	font-weight: 700;
	color: #FFFFFF;
	background-color: #1D6154;
	border: 1px solid #1D6154;
	padding: 10px 8px;
	margin: 30px;
	cursor: pointer;
	border-radius: 60px ;
}

.style-form h2 {
	text-align: center;
}

.style-form p a {
	display: block;
	text-align: center;
	color: black;
	padding: 0;
	margin: 20px auto 0 auto;
}


#EditionMode {
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	background-color: #000000;
	color: white;
	text-align: center;
	padding: 10px 0;
	font-family: 'Work Sans';
	font-weight: 400;
	z-index: 1000;
}	

